--- a/main.css
+++ b/main.css
@@ -1,3 +1,16 @@
-body{
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    display: flex; /* Using flex instead of grid here, as header, main, footer is one dimensional */
+    flex-direction: column;
+    min-height: 100vh;
     background-color: #152E08;
+}
+
+main {
+    flex: 1;
+    margin-top: 40px;
 }
