--- a/header.css
+++ b/header.css
@@ -1,10 +1,11 @@
 
 header {
     /*grid-area: header;*/
-    background-color: red;
+    background-color: black;
     text-align: center;
     position: fixed;
     width: 100%;
+    height: 50px;
 }
 
 #toggle_menu {
@@ -25,7 +26,7 @@ header {
 .menu_button_icon span::before,
 .menu_button_icon span::after {
     display: block;
-    background-color: pink;
+    background-color: #f5f6e5;
     height: 4px;
     width: 2em;
     border-radius: 4px;
@@ -45,7 +46,6 @@ header {
 
 nav{
     position: absolute;
-    background-color: yellow;
     display:none;
     width: 100%;
     text-align: right;
@@ -54,10 +54,11 @@ nav{
 
 li{
     list-style: none;
+    padding: 10px;
 }
 
 li a{
-    color: black;
+    color: #f5f6e5;
     text-decoration: none;
 }
 
@@ -67,6 +68,24 @@ li a:hover{
 
 #toggle_menu:checked + nav { /* ~ = tilde, vælger alle søskende til nav. + vælger alle nav direkte efter toggle*/
     display: block;
+    background-color: black;
+}
+
+header ul {
+    padding-right: 10px;
+}
+
+header a{
+    color: #bf9228;
+    text-decoration: none;
+}
+
+a h1:hover{
+    color: gray;
+}
+
+header h1{
+    margin: 10px;
 }
 
 @media screen and (min-width:800px) {
@@ -84,7 +103,7 @@ li a:hover{
     nav{
         display: block;
         position: absolute;
-        top: 25%;
+        top: 5px;
         width: 50%;
         right: 0;
     }
