--- a/main.css
+++ b/main.css
@@ -12,5 +12,12 @@ body {
 
 main {
     flex: 1;
-    margin-top: 40px;
+    margin-top: 50px;
+}
+
+
+@media screen and (min-width:800px) {
+    main{
+        padding: 0 100px;
+    }
 }
