--- a/footer.css
+++ b/footer.css
@@ -1,8 +1,14 @@
 
 footer {
-    background-color: blue;
+    background-color: black;
     position:fixed;  /*If i remove this it goes up again, how come?*/
     bottom:0;  /*Footer to the bottom*/
-    padding: 10px;
+    padding:10px;
     width: 100%;
+    color: #bf9228;
+    text-align: right;
+}
+
+p{
+    padding-right: 30px;
 }
