--- a/header.css
+++ b/header.css
@@ -104,18 +104,19 @@ header h1{
         display: block;
         position: absolute;
         top: 5px;
-        width: 50%;
+        width: 40%;
         right: 0;
     }
 
     nav ul {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
     }
 
     nav li {
         display: inline-block;
         text-align: center;
+        font-size: 20px;
     }
 
 }
