--- a/main.css
+++ b/main.css
@@ -21,3 +21,9 @@ main {
         padding: 0 100px;
     }
 }
+
+@media screen and (min-width:1500px) {
+    main{
+        padding: 0 500px;
+    }
+}
