--- a/about.css
+++ b/about.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin-top: 40px;
 }
 
 .about_me_img {
@@ -19,6 +20,11 @@
 .about_me_text {
     padding: 0 50px;
     color: #f5f6e5;
+    text-align: center;
+}
+
+.adobe {
+    text-align: center;
 }
 
 @media screen and (min-width:850px) {
