--- a/portfolio.css
+++ b/portfolio.css
@@ -31,4 +31,12 @@
     text-align: right;
 }
 
+@media screen and (min-width:850px) {
+    .gallery p{
+        font-size: 30px;
+    }
+    .gallery h1{
+        font-size: 50px;
+    }
 
+}
