--- a/main.css
+++ b/main.css
@@ -13,16 +13,17 @@ body {
 main {
     flex: 1;
     margin-top: 50px;
+    padding: 0px 50px;
 }
 
 @media screen and (min-width:800px) {
     main{
-        padding: 0 100px;
+        padding: 100px 100px;
     }
 }
 
 @media screen and (min-width:1500px) {
     main{
-        padding: 0 400px;
+        padding: 20px 400px;
     }
 }
