--- a/main.css
+++ b/main.css
@@ -16,6 +16,13 @@ main {
     padding: 0px 50px;
 }
 
+h1{
+    color: #bf9228;
+}
+
+p{
+    color: #f5f6e5;
+}
 @media screen and (min-width:800px) {
     main{
         padding: 100px 100px;
