--- a/main.css
+++ b/main.css
@@ -16,11 +16,11 @@ main {
     padding: 0px 50px;
 }
 
-h1{
+main h1{
     color: #bf9228;
 }
 
-p{
+main p{
     color: #f5f6e5;
 }
 
@@ -28,10 +28,12 @@ p{
     main{
         padding: 100px 100px;
     }
-}
 
-@media screen and (min-width:1500px) {
-    main{
-        padding: 20px 400px;
+    main h1{
+        font-size: 60px;
+    }
+
+    main p{
+        font-size: 40px;
     }
 }
