--- a/portfolio.css
+++ b/portfolio.css
@@ -4,20 +4,17 @@
 }
 
 .gallery article {
-    padding-top: 20px;
-    padding-bottom: 70px;
+    padding: 50px;
 }
 
 .gallery article .img_container img {
-    width: 70%;
+    width: 100%;
     border: 5px solid #bf9228;
     border-radius: 5%;
 }
 
 .gallery article .text_container {
     flex: 2;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 @media screen and (min-width: 800px) {
@@ -27,11 +24,16 @@
 
     .gallery article .img_container {
         flex: 1;
+        text-align: center;
     }
 
     .gallery article:nth-child(2n) { /*tag fat i hver anden article html tag*/
         flex-flow: row-reverse;
         text-align: right;
+    }
+
+    .hrtest{
+        width: 25%;
     }
 
 }
