--- a/portfolio.css
+++ b/portfolio.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+.gallery {
+    max-width: 1400px;
+    margin: auto;
+}
 .gallery article {
     padding: 50px;
     text-align: center;
@@ -19,7 +23,7 @@
     padding: 20px 20px;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
     .gallery article {
         text-align: left;
         display: flex;
