--- a/portfolio.css
+++ b/portfolio.css
@@ -8,7 +8,7 @@
     margin: auto;
 }
 .gallery article {
-    padding: 50px;
+    padding: 50px 0;
     text-align: center;
 }
 
@@ -21,6 +21,12 @@
 .gallery article .text_container {
     flex: 2;
     padding: 20px 20px;
+}
+
+@media screen and (min-width: 500px) {
+    .gallery article {
+        padding: 50px;
+    }
 }
 
 @media screen and (min-width: 1000px) {
