--- a/index.css
+++ b/index.css
@@ -42,6 +42,9 @@ img {
     text-decoration: underline;
 }
 
+h1 {
+    padding: 10px 0;
+}
 
 @media screen and (min-width:900px) {
     .centerpiece{
